Align menu with content, fix button text color

--- a/pdm-ui/_dev/sass/_header.scss
+++ b/pdm-ui/_dev/sass/_header.scss
@@ -1,6 +1,10 @@
 a, .btn {
     color: $colorlinks;
 
+    &.btn-primary {
+        color:white;
+    }
+
     &:hover, &:active {
         color:  $colorlinks-hl;
     }
