--- a/pdm-ui/_dev/sass/base.scss
+++ b/pdm-ui/_dev/sass/base.scss
@@ -3,6 +3,7 @@
 $sticky-header-height-xs: 60px;
 $zindex-header:           1080 !default;
 
+$grid-gutter-width:         0px;
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
 $hue: 180;
@@ -11,7 +12,6 @@ $color-header-bg: hsl($hue, 80%, 35%);
 $color-page-bg: hsl($hue, 30%, 95%);
 $colorlinks: hsl($hue, 80%, 30%);
 $colorlinks-hl: hsl($hue + 45, 100%, 40%);
-
 
 @import "header";
 @import "pdm-ui";
